[tool.poetry]
name = "hazzarah"
version = "0.1.0"
description = "A very simple World of Warcraft Classic guild website framework."
authors = ["Stephen Nicholas Swatman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.8"
ipython = "^7.16.1"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
